injiweb-1607-sec-backward-navigation added logout confirmation modal
Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -553,5 +553,11 @@
     "title": "لم يتم العثور على بيانات اعتماد مطابقة",
     "description": "يرجى تحميل بيانات الاعتماد المقابلة وإعادة محاولة عملية المشاركة",
     "goToHomeButton": "الذهاب إلى الصفحة الرئيسية"
+  },
+  "LogoutConfirmation": {
+    "title": "هل أنت متأكد أنك تريد الخروج؟",
+    "message": "العودة الآن ستؤدي إلى تسجيل خروجك. ستحتاج إلى تسجيل الدخول مرة أخرى للمتابعة. هل أنت متأكد من رغبتك في الخروج؟",
+    "logoutButton": "نعم، تسجيل الخروج",
+    "stayButton": "ابقَ في هذه الصفحة"
   }
 }
