--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -553,5 +553,11 @@
     "title": "Aucune information d'identification correspondante trouvée",
     "description": "Veuillez télécharger les informations d'identification correspondantes et réessayer le processus de partage",
     "goToHomeButton": "Aller à l'accueil"
+  },
+  "LogoutConfirmation": {
+    "title": "Êtes-vous sûr de vouloir partir ?",
+    "message": "Revenir en arrière vous déconnectera. Vous devrez vous reconnecter pour continuer. Êtes-vous sûr de vouloir quitter?",
+    "logoutButton": "Oui, se déconnecter",
+    "stayButton": "Rester sur cette page"
   }
 }
