--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -553,5 +553,11 @@
     "title": "कोई मिलती-जुलती साख नहीं मिली",
     "description": "कृपया संबंधित साख डाउनलोड करें और साझाकरण प्रक्रिया को पुनः प्रयास करें",
     "goToHomeButton": "होम पर जाएं"
+  },
+  "LogoutConfirmation": {
+    "title": "क्या आप निश्चित हैं आपकी बाहर निकलने की इच्छा है?",
+    "message": "अब वापस जाने पर आप लॉग आउट हो जाएँगे। आगे बढ़ने के लिए आपको फिर से लॉग इन करना होगा। क्या आप वाकई बाहर निकलना चाहते हैं?",
+    "logoutButton": "हाँ, लॉग आउट करें",
+    "stayButton": "इस पेज पर बने रहें"
   }
 }
