--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -553,5 +553,11 @@
     "title": "ಹೊಂದಾಣಿಕೆಯ ರುಜುವಾತುಗಳು ಕಂಡುಬಂದಿಲ್ಲ",
     "description": "ದಯವಿಟ್ಟು ಸಂಬಂಧಿತ ರುಜುವಾತುಗಳನ್ನು ಡೌನ್ಲೋಡ್ ಮಾಡಿ ಮತ್ತು ಹಂಚಿಕೆ ಪ್ರಕ್ರಿಯೆಯನ್ನು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
     "goToHomeButton": "ಮನೆಗೆ ಹೋಗಿ"
+  },
+  "LogoutConfirmation": {
+    "title": "ನೀವು ನಿರ್ಗಮಿಸಲು ಖಚಿತವಾಗಿ ಬಯಸುವಿರಾ?",
+    "message": "ಈಗ ಹಿಂತಿರುಗುವುದರಿಂದ ನೀವು ಲಾಗ್ ಔಟ್ ಆಗುತ್ತೀರಿ. ಮುಂದುವರಿಯಲು ನೀವು ಮತ್ತೆ ಲಾಗಿನ್ ಆಗಬೇಕಾಗುತ್ತದೆ. ನೀವು ನಿರ್ಗಮಿಸಲು ಖಚಿತವಾಗಿ ಬಯಸುವಿರಾ?",
+    "logoutButton": "ಹೌದು, ಲಾಗ್ ಔಟ್ ಮಾಡಿ",
+    "stayButton": "ಈ ಪುಟದಲ್ಲಿರು"
   }
 }
