--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -553,5 +553,11 @@
     "title": "பொருந்தும் சான்றுகள் கிடைக்கவில்லை",
     "description": "தயவுசெய்து தொடர்புடைய சான்றுகளைப் பதிவிறக்கி, பகிர்வு செயல்முறையை மீண்டும் முயற்சிக்கவும்",
     "goToHomeButton": "முகப்புக்குச் செல்"
+  },
+  "LogoutConfirmation": {
+    "title": "நீங்கள் நிச்சயமாக வெளியேற விரும்புகிறீர்களா?",
+    "message": "இப்போது திரும்பிச் செல்வது உங்களை வெளியேற்றிவிடும். தொடர நீங்கள் மீண்டும் உள்நுழைய வேண்டும். நீங்கள் வெளியேற விரும்புகிறீர்களா?",
+    "logoutButton": "ஆம், வெளியேறு",
+    "stayButton": "இந்த பக்கத்திலேயே இருங்கள்"
   }
 }
