injiweb-1607-sec-backward-navigation renamed sentinel to guard, updated test ids
Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -4,7 +4,7 @@
       "home": "Página inicial",
       "faq": "Perguntas frequentes",
       "login": "Conecte-se",
-      "logout": "வெளியேறு"
+      "logout": "Sair"
     },
     "Footer": {
       "product": "Um produto MOSIP",
@@ -412,7 +412,7 @@
     "ProfileDropdown": {
       "profile": "Perfil",
       "faq": "Perguntas frequentes",
-      "logout": "வெளியேறு"
+      "logout": "Sair"
     },
     "ProfilePage": {
       "title": "Meu Perfil",
